--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,14 +3,18 @@ owner: bklo94 # Your GitHub organization or username, where this repository live
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Rutorrent
+    url: $RUTORRENT_URL
+  - name: qBittorrent
+    url: $QBITTORRENT_URL
+  - name: VNStat
+    url: $VNSTAT_URL
+  - name: Portainer
+    url: $PORTAINER_URL
+  - name: Plex
+    url: $PLEX_URL
+  - name: Tautulli
+    url: $TAUTULLI_URL
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
